--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -4,6 +4,37 @@ VIDEOGROUND, VIDEOGROUND-BETAWORLD, VIDEOGROUND-BLOG-POSTS, THREEJS
 
 Dealing with some intense personal problems when it comes to things outside of this that are eating up the bulk of my time and energy. chances are I will not be getting much done this month.
 
+
+<!-- ////////// //////////
+    WEEK 5
+/////////////// ///////-->
+
+## () - SUN 07/24/2022 to  SAT 07/30/2022
+
+
+
+### () - SAT 07/30/2022
+
+### () - FRI 07/29/2022
+* () start post #998 on threejs-
+
+### () - THU 07/28/2022
+
+### () - WED 07/27/2022
+
+### () - TUE 07/26/2022
+* () start videoground r4
+
+### () - MON 07/25/2022
+* () finish videoground r3
+
+### () - SUN 07/24/2022
+* () new videoground-blogpost
+* () edit threejs-
+
+
+* () work on DAE file folder project
+
 <!-- ////////// //////////
     WEEK 4
 /////////////// ///////-->
@@ -11,19 +42,14 @@ Dealing with some intense personal problems when it comes to things outside of t
 ## () - SUN 07/17/2022 to  SAT 07/23/2022
 
 ### () - SAT 07/23/2022
-
-* () work on DAE file folder project
+* (done) remove old ga code as it is not used any more in hexo site source
+* (done) build and publish
+* (done) cerate new find vector midpoint demo folder ( var mv = v.add(nv).divideScalar(2); )
 
 ### () - FRI 07/22/2022
 * (done) new s3 ani loop section in for post folder for threejs-capsule-geometry
 * (done) start new post #997 on threejs-capsule-geometry
 * (done) video for threejs-capsule-geometry
-
-* () remove old ga code as it is not used any more in hexo site source
-* () build and publish
-
-* () cerate new find vector midpoint demo folder ( var mv = v.add(nv).divideScalar(2); )
-* () work on DAE file folder project
 
 ### () - THU 07/21/2022
 * (done) for post folder for threejs-examples-scene-shake
