--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -26,9 +26,9 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start videoground r4
 
 ### () - MON 07/25/2022
-* () start new videoground-blogpost video for threejs-emissive-map
+* (done) start new videoground-blogpost video for threejs-emissive-map
+* (done) edit threejs-emissive-map
 * () edit threejs-examples-biplane-group
-* () edit threejs-emissive-map
 * () work on DAE file folder project
 * () finish videoground r3
 
