--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -21,16 +21,18 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - THU 07/28/2022
 
 ### () - WED 07/27/2022
+* () edit threejs-
+* () start videoground r4
 
 ### () - TUE 07/26/2022
-* () start videoground r4
+* () edit threejs-
+* () work on DAE file folder project
+* () finish videoground r3
 
 ### () - MON 07/25/2022
 * (done) start new videoground-blogpost video for threejs-emissive-map
 * (done) edit threejs-emissive-map
 * () edit threejs-examples-biplane-group
-* () work on DAE file folder project
-* () finish videoground r3
 
 ### () - SUN 07/24/2022
 * (done) start new videoground-blogpost video for threejs-examples-biplane-group
