--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -25,7 +25,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start videoground r4
 
 ### () - TUE 07/26/2022
-* () new videoground-blogpost video for threejs-examples-position-things-to-sphere-surface
+* (done) new videoground-blogpost video for threejs-examples-position-things-to-sphere-surface
 * () edit threejs-examples-position-things-to-sphere-surface
 * () edit threejs-examples-biplane-group
 * () work on DAE file folder project
