--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -26,7 +26,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - TUE 07/26/2022
 * (done) new videoground-blogpost video for threejs-examples-position-things-to-sphere-surface
-* () edit threejs-examples-position-things-to-sphere-surface
+* (done) edit threejs-examples-position-things-to-sphere-surface
 * () edit threejs-examples-biplane-group
 * () work on DAE file folder project
 * () finish videoground r3
