--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -21,15 +21,20 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - THU 07/28/2022
 
 ### () - WED 07/27/2022
+* () edit threejs-examples-biplane-group
+
+* () new videoground-blogpost video for threejs
 * () edit threejs-
-* () start videoground r4
+
+* () work on videoground r4
+* () work on DAE file folder project
+
 
 ### () - TUE 07/26/2022
 * (done) new videoground-blogpost video for threejs-examples-position-things-to-sphere-surface
 * (done) edit threejs-examples-position-things-to-sphere-surface
-* () edit threejs-examples-biplane-group
-* () work on DAE file folder project
-* () finish videoground r3
+* (done) finish videoground r3
+* (done) start videoground r4
 
 ### () - MON 07/25/2022
 * (done) start new videoground-blogpost video for threejs-emissive-map
