--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -23,8 +23,8 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - WED 07/27/2022
 * () edit threejs-examples-biplane-group
 
-* () new videoground-blogpost video for threejs
-* () edit threejs-
+* () new videoground-blogpost video for threejs-camera-orthographic
+* () edit threejs-camera-orthographic
 
 * () work on videoground r4
 * () work on DAE file folder project
