--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -19,12 +19,13 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start post #998 on threejs-
 
 ### () - THU 07/28/2022
-
-### () - WED 07/27/2022
 * () edit threejs-examples-biplane-group
 
-* () new videoground-blogpost video for threejs-camera-orthographic
-* () edit threejs-camera-orthographic
+### () - WED 07/27/2022
+* (done) new videoground-blogpost video for threejs-camera-orthographic
+* (done) edit threejs-camera-orthographic
+
+* () start a new proto-aplerp demo
 
 * () work on videoground r4
 * () work on DAE file folder project
