--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -24,8 +24,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - WED 07/27/2022
 * (done) new videoground-blogpost video for threejs-camera-orthographic
 * (done) edit threejs-camera-orthographic
-
-* () start a new proto-aplerp demo
+* (done) start a new proto-aplerp demo
 
 * () work on videoground r4
 * () work on DAE file folder project
