--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -16,19 +16,18 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - SAT 07/30/2022
 
 ### () - FRI 07/29/2022
-* () start post #998 on threejs-
+* () start post #998 on threejs-examples-aplerp
 
 ### () - THU 07/28/2022
 * () edit threejs-examples-biplane-group
+* () start aplerp for post folder
+* () work on videoground r4
+* () work on DAE file folder project
 
 ### () - WED 07/27/2022
 * (done) new videoground-blogpost video for threejs-camera-orthographic
 * (done) edit threejs-camera-orthographic
 * (done) start a new proto-aplerp demo
-
-* () work on videoground r4
-* () work on DAE file folder project
-
 
 ### () - TUE 07/26/2022
 * (done) new videoground-blogpost video for threejs-examples-position-things-to-sphere-surface
