--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -20,7 +20,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - THU 07/28/2022
 * () edit threejs-examples-biplane-group
-* () start aplerp for post folder
+* (done) start aplerp for post folder
 * () work on videoground r4
 * () work on DAE file folder project
 
