--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -19,7 +19,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 * () start post #998 on threejs-examples-aplerp
 
 ### () - THU 07/28/2022
-* () edit threejs-examples-biplane-group
+* (done) edit threejs-examples-biplane-group
 * (done) start aplerp for post folder
 * () work on videoground r4
 * () work on DAE file folder project
