--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -17,12 +17,15 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - FRI 07/29/2022
 * () start post #998 on threejs-examples-aplerp
+* () videoground-blogposts - new video for threejs-examples-aplerp
+* () build and publish
+* () videoground-betaworld - DAE file folder project
+* () work on videoground r5
 
 ### () - THU 07/28/2022
 * (done) edit threejs-examples-biplane-group
 * (done) start aplerp for post folder
-* () work on videoground r4
-* () work on DAE file folder project
+* (done) work on videoground r4
 
 ### () - WED 07/27/2022
 * (done) new videoground-blogpost video for threejs-camera-orthographic
