--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -16,7 +16,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 ### () - SAT 07/30/2022
 
 ### () - FRI 07/29/2022
-* () start post #998 on threejs-examples-aplerp
+* (done) start post #998 on threejs-examples-aplerp
 * () videoground-blogposts - new video for threejs-examples-aplerp
 * () build and publish
 * () videoground-betaworld - DAE file folder project
