--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -17,7 +17,7 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 ### () - FRI 07/29/2022
 * (done) start post #998 on threejs-examples-aplerp
-* () edit threejs-examples
+* (done) edit threejs-examples
 * () videoground-blogposts - new video for threejs-examples-aplerp
 * () build and publish
 * () videoground-betaworld - DAE file folder project
