--- a/todo/today/todo_2022_07.md
+++ b/todo/today/todo_2022_07.md
@@ -14,14 +14,15 @@ Dealing with some intense personal problems when it comes to things outside of t
 
 
 ### () - SAT 07/30/2022
+* () videoground-betaworld - DAE file folder project
+* () work on videoground r5
 
 ### () - FRI 07/29/2022
 * (done) start post #998 on threejs-examples-aplerp
 * (done) edit threejs-examples
 * (done) videoground-blogposts - new video for threejs-examples-aplerp
-* () build and publish
-* () videoground-betaworld - DAE file folder project
-* () work on videoground r5
+* (done) build and publish
+* (done) work on videoground r5
 
 ### () - THU 07/28/2022
 * (done) edit threejs-examples-biplane-group
