--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -21,14 +21,14 @@ I might not get much done this week because of life outside of this. What little
 * () edit threejs-
 
 ### () - THU 08/04/2022
-* () edit threejs-
+* () videoground-blog-posts - new video for threejs-buffer-geometry-loader
+* () edit threejs-buffer-geometry-loader
 
 ### () - WED 08/03/2022
-* () edit threejs-
+* () videoground-blog-posts - new video for threejs-wireframe
+* () edit threejs-wireframe
 
 ### () - TUE 08/02/2022
-* () edit threejs-
 
 ### () - MON 08/01/2022
-* () this todo list
-* () edit threejs-
+* (done) this todo list
