--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -18,15 +18,19 @@ I might not get much done this week because of life outside of this. What little
 * () edit threejs-
 
 ### () - FRI 08/05/2022
+* () for post folder on threejs-examples-camera-kit
+* () videoground-blog-posts - new video for threejs-examples-camera-kit
+* () start post #999 on threejs-examples-camera-kit
 * () edit threejs-
 
 ### () - THU 08/04/2022
 * () videoground-blog-posts - new video for threejs-buffer-geometry-loader
 * () edit threejs-buffer-geometry-loader
+* () start new proto folder on camera-kit
 
 ### () - WED 08/03/2022
-* () videoground-blog-posts - new video for threejs-wireframe
-* () edit threejs-wireframe
+* (done) videoground-blog-posts - new video for threejs-wireframe
+* (done) edit threejs-wireframe
 
 ### () - TUE 08/02/2022
 
