--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -24,7 +24,7 @@ I might not get much done this week because of life outside of this. What little
 * () edit threejs-
 
 ### () - THU 08/04/2022
-* () edit threejs-buffer-geometry-loader
+* (done) edit threejs-buffer-geometry-loader
 * () edit threejs-examples-dae-tools
 
 * () videoground-blog-posts - new video for threejs-buffer-geometry-loader
