--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -25,10 +25,9 @@ I might not get much done this week because of life outside of this. What little
 
 ### () - THU 08/04/2022
 * (done) edit threejs-buffer-geometry-loader
-* () edit threejs-examples-dae-tools
+* (done) edit threejs-examples-dae-tools
 
 * () videoground-blog-posts - new video for threejs-buffer-geometry-loader
-
 * () start new proto folder on camera-kit
 
 ### () - WED 08/03/2022
