--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -26,8 +26,8 @@ I might not get much done this week because of life outside of this. What little
 ### () - THU 08/04/2022
 * (done) edit threejs-buffer-geometry-loader
 * (done) edit threejs-examples-dae-tools
+* (done) videoground-blog-posts - new video for threejs-buffer-geometry-loader
 
-* () videoground-blog-posts - new video for threejs-buffer-geometry-loader
 * () start new proto folder on camera-kit
 
 ### () - WED 08/03/2022
