--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -27,8 +27,7 @@ I might not get much done this week because of life outside of this. What little
 * (done) edit threejs-buffer-geometry-loader
 * (done) edit threejs-examples-dae-tools
 * (done) videoground-blog-posts - new video for threejs-buffer-geometry-loader
-
-* () start new proto folder on camera-kit
+* (done) start for post folder on camera-kit
 
 ### () - WED 08/03/2022
 * (done) videoground-blog-posts - new video for threejs-wireframe
