--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -19,6 +19,8 @@ I might not get much done this week because of life outside of this. What little
 
 ### () - FRI 08/05/2022
 * () start post #999 on threejs-examples-camera-kit
+* () edit threejs-exmaples to link to threejs-examples-camera-kit
+* () edit threejs-camera, and other posts to link to threejs-examples-camera-kit
 
 * () videoground-blog-posts - new video for threejs-examples-camera-kit
 * () for post folder on threejs-examples-camera-kit
