--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -20,11 +20,8 @@ I might not get much done this week because of life outside of this. What little
 ### () - FRI 08/05/2022
 * (done) start post #999 on threejs-examples-camera-kit
 * (done) edit threejs-exmaples to link to threejs-examples-camera-kit
-
 * () start r1 in for post folder on threejs-examples-camera-kit
-* () videoground-blog-posts - new video for threejs-examples-camera-kit
-
-
+* (done) videoground-blog-posts - new video for threejs-examples-camera-kit
 
 ### () - THU 08/04/2022
 * (done) edit threejs-buffer-geometry-loader
