--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -7,6 +7,35 @@ Late last month I started working on improving video ground which I have been us
 For the last few months I have been focusing mainly just on threejs when it comes to editing older content as well as writing new content, and thus far there are not plains on changing that.
 
 <!-- ////////// //////////
+    WEEK 2
+/////////////// ///////-->
+
+## () - SUN 08/07/2022 to  SAT 08/13/2022
+
+
+### () - SAT 08/13/2022
+* () edit threejs-
+* () start post #1000 on threejs-
+
+### () - FRI 08/12/2022
+* () edit threejs-
+
+### () - THU 08/11/2022
+* () edit threejs-
+
+### () - WED 08/10/2022
+* () edit threejs-
+
+### () - TUE 08/09/2022
+* () edit threejs-
+
+### () - MON 08/08/2022
+* () edit threejs-
+
+
+### () - SUN 08/07/2022
+
+<!-- ////////// //////////
     WEEK 1
 /////////////// ///////-->
 
