--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -24,13 +24,16 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () edit threejs-
 
 ### () - WED 08/10/2022
+* () videoground-blog-posts:
 * () edit threejs-
 
 ### () - TUE 08/09/2022
+* () videoground-blog-posts:
 * () edit threejs-
 
 ### () - MON 08/08/2022
-* () edit threejs-
+* () videoground-blog-posts: new video for threejs-buffer-geometry-rotation
+* () edit threejs-buffer-geometry-rotation
 
 
 ### () - SUN 08/07/2022
