--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -28,12 +28,12 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () edit threejs-
 
 ### () - TUE 08/09/2022
-* () videoground-blog-posts:
-* () edit threejs-
+* () videoground-blog-posts: threejs-buffer-geometry
+* () edit threejs-buffer-geometry
 
 ### () - MON 08/08/2022
-* () videoground-blog-posts: new video for threejs-buffer-geometry-rotation
-* () edit threejs-buffer-geometry-rotation
+* (done) videoground-blog-posts: new video for threejs-buffer-geometry-rotation
+* (done) edit threejs-buffer-geometry-rotation
 
 
 ### () - SUN 08/07/2022
