--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -28,6 +28,10 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () edit threejs-
 
 ### () - TUE 08/09/2022
+* (done) new s7-8 examples for threejs-buffer-geometry
+* () new s3 example for threejs-buffer-geometry-rotation
+* () update s6-rotation example in threejs-buffer-geometry based on s3 example from threejs-buffer-geometry-rotation
+
 * () videoground-blog-posts: threejs-buffer-geometry
 * () edit threejs-buffer-geometry
 
