--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -34,6 +34,7 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 * () videoground-blog-posts: threejs-buffer-geometry
 * () edit threejs-buffer-geometry
+* () edit threejs-buffer-geometry-roation
 
 ### () - MON 08/08/2022
 * (done) videoground-blog-posts: new video for threejs-buffer-geometry-rotation
