--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -32,8 +32,7 @@ For the last few months I have been focusing mainly just on threejs when it come
 * (done) new s3 example for threejs-buffer-geometry-rotation
 * (done) edit threejs-buffer-geometry-rotation
 * (done) update s6-rotation example in threejs-buffer-geometry based on s3 example from threejs-buffer-geometry-rotation
-
-* () edit threejs-buffer-geometry with content for new source code examples
+* (done) edit threejs-buffer-geometry with content for new source code examples
 
 * () videoground-blog-posts: threejs-buffer-geometry
 * () edit threejs-buffer-geometry with link to video
