--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -24,8 +24,12 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () edit threejs-
 
 ### () - WED 08/10/2022
+* () see about starting r1 of threejs-examples-sequence-hooks
+* () fix problem with partPer values
+* () 
+
+* () edit threejs-examples-sequence-hooks
 * () videoground-blog-posts:
-* () edit threejs-
 
 ### () - TUE 08/09/2022
 * (done) new s7-8 examples for threejs-buffer-geometry
