--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -21,15 +21,19 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () edit threejs-
 
 ### () - THU 08/11/2022
+* () start r1 in for post folder on threejs-examples-camera-kit
 * () edit threejs-
 
 ### () - WED 08/10/2022
+* () videoground-blog-posts: threejs-buffer-geometry
+* () edit threejs-buffer-geometry with link to video
+
+* () edit: threejs-camera-move
+* () videoground-blog-posts: threejs-camera-move
+
 * () see about starting r1 of threejs-examples-sequence-hooks
 * () fix problem with partPer values
-* () 
-
 * () edit threejs-examples-sequence-hooks
-* () videoground-blog-posts:
 
 ### () - TUE 08/09/2022
 * (done) new s7-8 examples for threejs-buffer-geometry
@@ -37,10 +41,6 @@ For the last few months I have been focusing mainly just on threejs when it come
 * (done) edit threejs-buffer-geometry-rotation
 * (done) update s6-rotation example in threejs-buffer-geometry based on s3 example from threejs-buffer-geometry-rotation
 * (done) edit threejs-buffer-geometry with content for new source code examples
-
-* () videoground-blog-posts: threejs-buffer-geometry
-* () edit threejs-buffer-geometry with link to video
-
 
 ### () - MON 08/08/2022
 * (done) videoground-blog-posts: new video for threejs-buffer-geometry-rotation
@@ -58,12 +58,10 @@ For the last few months I have been focusing mainly just on threejs when it come
 I might not get much done this week because of life outside of this. What little work I might get done will be on threejs content and the threejs repo.
 
 ### () - SAT 08/06/2022
-* () edit threejs-
 
 ### () - FRI 08/05/2022
 * (done) start post #999 on threejs-examples-camera-kit
 * (done) edit threejs-exmaples to link to threejs-examples-camera-kit
-* () start r1 in for post folder on threejs-examples-camera-kit
 * (done) videoground-blog-posts - new video for threejs-examples-camera-kit
 
 ### () - THU 08/04/2022
