--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -25,7 +25,8 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () edit threejs-
 
 ### () - WED 08/10/2022
-* () videoground-blog-posts: threejs-buffer-geometry
+* (done) videoground-blog-posts: threejs-buffer-geometry - triangle group done
+* () videoground-blog-posts: plain mutate, rotation, and built in geometries
 * () edit threejs-buffer-geometry with link to video
 
 * () edit: threejs-camera-move
