--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -26,8 +26,8 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ### () - WED 08/10/2022
 * (done) videoground-blog-posts: threejs-buffer-geometry - triangle group done
-* () videoground-blog-posts: plain mutate, rotation, and built in geometries
-* () edit threejs-buffer-geometry with link to video
+* (done) videoground-blog-posts: plain mutate, rotation
+* (done) edit threejs-buffer-geometry with link to video
 
 * () edit: threejs-camera-move
 * () videoground-blog-posts: threejs-camera-move
