--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -15,26 +15,28 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ### () - SAT 08/13/2022
 * () edit threejs-
-* () start post #1000 on threejs-
 
 ### () - FRI 08/12/2022
-* () edit threejs-
+* (done) for post folder for threejs-cylinder-geometry
+* (done) start post #1000 on threejs-cylinder-geometry
+
+* () videoground-blog-posts: threejs-cylinder-geometry
+
+* () videoground-blog-posts: threejs-camera-move
+* () edit: threejs-camera-move
+
+* () see about starting r1 of threejs-examples-sequence-hooks
+* () fix problem with partPer values
+* () edit threejs-examples-sequence-hooks
+* () start r1 in for post folder on threejs-examples-camera-kit
+* () edit threejs-examples-camera-kit
 
 ### () - THU 08/11/2022
-* () start r1 in for post folder on threejs-examples-camera-kit
-* () edit threejs-
 
 ### () - WED 08/10/2022
 * (done) videoground-blog-posts: threejs-buffer-geometry - triangle group done
 * (done) videoground-blog-posts: plain mutate, rotation
 * (done) edit threejs-buffer-geometry with link to video
-
-* () edit: threejs-camera-move
-* () videoground-blog-posts: threejs-camera-move
-
-* () see about starting r1 of threejs-examples-sequence-hooks
-* () fix problem with partPer values
-* () edit threejs-examples-sequence-hooks
 
 ### () - TUE 08/09/2022
 * (done) new s7-8 examples for threejs-buffer-geometry
