--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -19,12 +19,10 @@ For the last few months I have been focusing mainly just on threejs when it come
 ### () - FRI 08/12/2022
 * (done) for post folder for threejs-cylinder-geometry
 * (done) start post #1000 on threejs-cylinder-geometry
-
-* () videoground-blog-posts: threejs-cylinder-geometry
+* (done) videoground-blog-posts: threejs-cylinder-geometry
 
 * () videoground-blog-posts: threejs-camera-move
 * () edit: threejs-camera-move
-
 * () see about starting r1 of threejs-examples-sequence-hooks
 * () fix problem with partPer values
 * () edit threejs-examples-sequence-hooks
