--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -7,6 +7,36 @@ Late last month I started working on improving video ground which I have been us
 For the last few months I have been focusing mainly just on threejs when it comes to editing older content as well as writing new content, and thus far there are not plains on changing that.
 
 <!-- ////////// //////////
+    WEEK 3
+/////////////// ///////-->
+
+## () - SUN 08/14/2022 to  SAT 08/20/2022
+
+
+### () - SAT 08/20/2022
+
+### () - FRI 08/19/2022
+* () start post #1001 on threejs-
+
+### () - THU 08/18/2022
+
+### () - WED 08/17/2022
+* () start r1 in for post folder on threejs-examples-camera-kit
+* () edit threejs-examples-camera-kit
+
+### () - TUE 08/16/2022
+* () see about starting r1 of threejs-examples-sequence-hooks
+* () fix problem with partPer values
+* () edit threejs-examples-sequence-hooks
+
+### () - MON 08/15/2022
+* () videoground-blog-posts: threejs-camera-move
+* () edit: threejs-camera-move
+
+### () - SUN 08/14/2022
+* () start new proto for post #1001
+
+<!-- ////////// //////////
     WEEK 2
 /////////////// ///////-->
 
@@ -14,20 +44,12 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 
 ### () - SAT 08/13/2022
-* () edit threejs-
+* () build and publish
 
 ### () - FRI 08/12/2022
 * (done) for post folder for threejs-cylinder-geometry
 * (done) start post #1000 on threejs-cylinder-geometry
 * (done) videoground-blog-posts: threejs-cylinder-geometry
-
-* () videoground-blog-posts: threejs-camera-move
-* () edit: threejs-camera-move
-* () see about starting r1 of threejs-examples-sequence-hooks
-* () fix problem with partPer values
-* () edit threejs-examples-sequence-hooks
-* () start r1 in for post folder on threejs-examples-camera-kit
-* () edit threejs-examples-camera-kit
 
 ### () - THU 08/11/2022
 
