--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -35,6 +35,7 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ### () - SUN 08/14/2022
 * () start new proto for post #1001
+* () look into skiined mesh more when it comes to the r111 demo and getting a basic idea working.
 
 <!-- ////////// //////////
     WEEK 2
@@ -44,7 +45,8 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 
 ### () - SAT 08/13/2022
-* () build and publish
+* (done) build and publish
+* (done) made some progress with skinned mesh demos for r140 and r111
 
 ### () - FRI 08/12/2022
 * (done) for post folder for threejs-cylinder-geometry
