--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -35,7 +35,7 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ### () - SUN 08/14/2022
 * () start new proto for post #1001
-* () look into skiined mesh more when it comes to the r111 demo and getting a basic idea working.
+* () look into skinned mesh more when it comes to the r111 demo and getting a basic idea working.
 
 <!-- ////////// //////////
     WEEK 2
