--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -33,9 +33,11 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () videoground-blog-posts: threejs-camera-move
 * () edit: threejs-camera-move
 
+* () proto-weird-face-two
+
 ### () - SUN 08/14/2022
-* () start new r140 demo proto-virtual-skinned-mesh
-* () start new r140 demo proto-weird-face-two
+* (done) start new r140 demo proto-virtual-skinned-mesh
+* (done) start new r140 demo proto-weird-face-two
 * (done) look into skinned mesh more when it comes to the r111 demo and getting a basic idea working.
 * (done) was able to get the r140 demo of skinned Mesh working on my laptop that supports webgl2, getting this to work on rpi might be hopeless though
 
