--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -14,22 +14,28 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 
 ### () - SAT 08/20/2022
+* () work on r5 of videoground
 
 ### () - FRI 08/19/2022
 * () start post #1001 on threejs-
+* () work on r5 of videoground
 
 ### () - THU 08/18/2022
+* () work on r5 of videoground
 
 ### () - WED 08/17/2022
 * () start r1 in for post folder on threejs-examples-camera-kit
 * () edit threejs-examples-camera-kit
+* () work on r5 of videoground
 
 ### () - TUE 08/16/2022
 * () see about starting r1 of threejs-examples-sequence-hooks
 * () fix problem with partPer values
 * () edit threejs-examples-sequence-hooks
+* () work on r5 of videoground
 
 ### () - MON 08/15/2022
+* (done) work on r5 of videoground
 * () videoground-blog-posts: threejs-camera-move
 * () edit: threejs-camera-move
 
