--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -36,8 +36,8 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ### () - MON 08/15/2022
 * (done) work on r5 of videoground
-* () videoground-blog-posts: threejs-camera-move
-* () edit: threejs-camera-move
+* () videoground-blog-posts: threejs-camera
+* () edit: threejs-camera
 
 * () proto-weird-face-two
 
