--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -36,7 +36,9 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ### () - MON 08/15/2022
 * (done) work on r5 of videoground
-* () videoground-blog-posts: threejs-camera
+* (done) videoground-blog-posts: threejs-camera
+
+* () for post folder for threejs-camera in test threejs repo
 * () edit: threejs-camera
 
 * () proto-weird-face-two
@@ -45,7 +47,7 @@ For the last few months I have been focusing mainly just on threejs when it come
 * (done) start new r140 demo proto-virtual-skinned-mesh
 * (done) start new r140 demo proto-weird-face-two
 * (done) look into skinned mesh more when it comes to the r111 demo and getting a basic idea working.
-* (done) was able to get the r140 demo of skinned Mesh working on my laptop that supports webgl2, getting this to work on rpi might be hopeless though
+* (done) was able to get the r140 demo of skinned Mesh working on my laptop that supports webgl2
 
 <!-- ////////// //////////
     WEEK 2
