--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -37,9 +37,8 @@ For the last few months I have been focusing mainly just on threejs when it come
 ### () - MON 08/15/2022
 * (done) work on r5 of videoground
 * (done) videoground-blog-posts: threejs-camera
-
-* () for post folder for threejs-camera in test threejs repo
-* () edit: threejs-camera
+* (done) for post folder for threejs-camera in test threejs repo
+* (done) edit: threejs-camera
 
 * () proto-weird-face-two
 
