--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -12,35 +12,40 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ## () - SUN 08/14/2022 to  SAT 08/20/2022
 
+This week I would like to start a protoype on threejs on sunday that I will then write about on fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/20/2022
-* () work on r5 of videoground
+* () work on rx of videoground
 
 ### () - FRI 08/19/2022
-* () start post #1001 on threejs-
-* () work on r5 of videoground
+* () start post #1001 on threejs-examples-weird-face-two
+* () work on rx of videoground
 
 ### () - THU 08/18/2022
-* () work on r5 of videoground
+* () work on rx of videoground
+* () start threejs-examples-weird-face-two for post folder
 
 ### () - WED 08/17/2022
 * () start r1 in for post folder on threejs-examples-camera-kit
 * () edit threejs-examples-camera-kit
-* () work on r5 of videoground
+* () work on rx of videoground
+* () proto-weird-face-two
 
 ### () - TUE 08/16/2022
+
 * () see about starting r1 of threejs-examples-sequence-hooks
 * () fix problem with partPer values
 * () edit threejs-examples-sequence-hooks
-* () work on r5 of videoground
+
+* () proto-weird-face-two
+* () work on rx of videoground
 
 ### () - MON 08/15/2022
 * (done) work on r5 of videoground
 * (done) videoground-blog-posts: threejs-camera
 * (done) for post folder for threejs-camera in test threejs repo
 * (done) edit: threejs-camera
-
-* () proto-weird-face-two
+* (done) proto-weird-face-two
 
 ### () - SUN 08/14/2022
 * (done) start new r140 demo proto-virtual-skinned-mesh
