--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -32,10 +32,9 @@ This week I would like to start a protoype on threejs on sunday that I will then
 * () proto-weird-face-two
 
 ### () - TUE 08/16/2022
-
-* () see about starting r1 of threejs-examples-sequence-hooks
-* () fix problem with partPer values
-* () edit threejs-examples-sequence-hooks
+* (done) see about starting r1 of threejs-examples-sequence-hooks
+* (done) fix problem with partPer values
+* (done) edit threejs-examples-sequence-hooks
 
 * () proto-weird-face-two
 * () work on rx of videoground
