--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -7,17 +7,42 @@ Late last month I started working on improving video ground which I have been us
 For the last few months I have been focusing mainly just on threejs when it comes to editing older content as well as writing new content, and thus far there are not plains on changing that.
 
 <!-- ////////// //////////
+    WEEK 4
+/////////////// ///////-->
+
+## () - SUN 08/21/2022 to  SAT 08/27/2022
+
+### () - SAT 08/27/2022
+
+### () - FRI 08/26/2022
+
+### () - THU 08/25/2022
+
+### () - WED 08/24/2022
+
+### () - TUE 08/23/2022
+* () start r1 in for post folder on threejs-examples-camera-kit
+* () edit threejs-examples-camera-kit
+
+### () - MON 08/22/2022
+
+### () - SUN 08/21/2022
+
+
+
+<!-- ////////// //////////
     WEEK 3
 /////////////// ///////-->
 
 ## () - SUN 08/14/2022 to  SAT 08/20/2022
 
-This week I would like to start a protoype on threejs on sunday that I will then write about on fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
+This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/20/2022
 * () work on rx of videoground
 
 ### () - FRI 08/19/2022
+* () start threejs-examples-weird-face-two for post folder
 * () start post #1001 on threejs-examples-weird-face-two
 * () work on rx of videoground
 
@@ -26,18 +51,18 @@ This week I would like to start a protoype on threejs on sunday that I will then
 * () start threejs-examples-weird-face-two for post folder
 
 ### () - WED 08/17/2022
-* () start r1 in for post folder on threejs-examples-camera-kit
-* () edit threejs-examples-camera-kit
-* () work on rx of videoground
+* () work on r6 of videoground
+* () videoground-blog-posts: threejs-camera-perspective
+* () edit: threejs-camera-perspective
+
 * () proto-weird-face-two
+
 
 ### () - TUE 08/16/2022
 * (done) see about starting r1 of threejs-examples-sequence-hooks
 * (done) fix problem with partPer values
 * (done) edit threejs-examples-sequence-hooks
-
-* () proto-weird-face-two
-* () work on rx of videoground
+* (done) finish rr of videoground
 
 ### () - MON 08/15/2022
 * (done) work on r5 of videoground
