--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -39,19 +39,19 @@ For the last few months I have been focusing mainly just on threejs when it come
 This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/20/2022
-* () work on rx of videoground
+* () work on r6 of videoground
 
 ### () - FRI 08/19/2022
 * () start threejs-examples-weird-face-two for post folder
 * () start post #1001 on threejs-examples-weird-face-two
-* () work on rx of videoground
+* () work on r6 of videoground
 
 ### () - THU 08/18/2022
-* () work on rx of videoground
+* () work on r6 of videoground
 * () start threejs-examples-weird-face-two for post folder
 
 ### () - WED 08/17/2022
-* () work on r6 of videoground
+* (done) work on r6 of videoground
 * () videoground-blog-posts: threejs-camera-perspective
 * () edit: threejs-camera-perspective
 
