--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -15,19 +15,24 @@ For the last few months I have been focusing mainly just on threejs when it come
 ### () - SAT 08/27/2022
 
 ### () - FRI 08/26/2022
+* () start post #1002 on threejs-examples-weird-face-two
 
 ### () - THU 08/25/2022
+* () threejs-examples-weird-face-two for post folder
 
 ### () - WED 08/24/2022
+* () threejs-examples-weird-face-two for post folder
 
 ### () - TUE 08/23/2022
 * () start r1 in for post folder on threejs-examples-camera-kit
 * () edit threejs-examples-camera-kit
+* () threejs-examples-weird-face-two for post folder
 
 ### () - MON 08/22/2022
+* () threejs-examples-weird-face-two for post folder
 
 ### () - SUN 08/21/2022
-
+* () threejs-examples-weird-face-two for post folder
 
 
 <!-- ////////// //////////
@@ -42,21 +47,23 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * () work on r6 of videoground
 
 ### () - FRI 08/19/2022
-* () start threejs-examples-weird-face-two for post folder
-* () start post #1001 on threejs-examples-weird-face-two
+* () work on electronjs-examples-user-data-file
+* () start post #1001 on electronjs-examples-user-data-file
 * () work on r6 of videoground
 
 ### () - THU 08/18/2022
-* () work on r6 of videoground
-* () start threejs-examples-weird-face-two for post folder
+* () work on electronjs-examples-user-data-file
 
-### () - WED 08/17/2022
-* (done) work on r6 of videoground
+* () videoground-blog-posts: finish DAE file land-set-one
 * () videoground-blog-posts: threejs-camera-perspective
 * () edit: threejs-camera-perspective
 
-* () proto-weird-face-two
+* () work on r6 of videoground
 
+### () - WED 08/17/2022
+* (done) work on r6 of videoground
+* (done) started a new electronjs example to explore something that I might apply to videoground
+* () videoground-blog-posts: started new DAE file land-set-one
 
 ### () - TUE 08/16/2022
 * (done) see about starting r1 of threejs-examples-sequence-hooks
