--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -52,7 +52,7 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * () work on r6 of videoground
 
 ### () - THU 08/18/2022
-* () work on electronjs-examples-user-data-file
+* (done) work on electronjs-examples-user-data-file
 
 * () videoground-blog-posts: finish DAE file land-set-one
 * () videoground-blog-posts: threejs-camera-perspective
