--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -54,9 +54,8 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - THU 08/18/2022
 * (done) work on electronjs-examples-user-data-file
 * (done) videoground-blog-posts: finish DAE file land-set-one
-
-* () videoground-blog-posts: threejs-camera-perspective
-* () edit: threejs-camera-perspective
+* (done) videoground-blog-posts: threejs-camera-perspective
+* (done) edit: threejs-camera-perspective
 
 * () work on r6 of videoground
 
