--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -49,6 +49,10 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - FRI 08/19/2022
 * () work on electronjs-examples-user-data-file
 * () start post #1001 on electronjs-examples-user-data-file
+
+* () videoground-blog-posts: finish DAE file land-set-one
+* () videoground-blog-posts: start new DAE file folder project
+
 * () work on r6 of videoground
 
 ### () - THU 08/18/2022
@@ -56,8 +60,6 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * (done) videoground-blog-posts: finish DAE file land-set-one
 * (done) videoground-blog-posts: threejs-camera-perspective
 * (done) edit: threejs-camera-perspective
-
-* () work on r6 of videoground
 
 ### () - WED 08/17/2022
 * (done) work on r6 of videoground
