--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -44,11 +44,15 @@ For the last few months I have been focusing mainly just on threejs when it come
 This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/20/2022
+* () edit electronjs-example-user-data-file
+* () buld and publish
+
 * () work on r6 of videoground
+
 
 ### () - FRI 08/19/2022
 * () work on electronjs-examples-user-data-file
-* () start post #1001 on electronjs-examples-user-data-file
+* (done) start post #1001 on electronjs-example-user-data-file
 
 * () videoground-blog-posts: finish DAE file land-set-one
 * () videoground-blog-posts: start new DAE file folder project
