--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -51,7 +51,7 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 
 
 ### () - FRI 08/19/2022
-* () work on electronjs-examples-user-data-file
+* (done) work on electronjs-examples-user-data-file
 * (done) start post #1001 on electronjs-example-user-data-file
 
 * () videoground-blog-posts: finish DAE file land-set-one
