--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -47,6 +47,7 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * () edit electronjs-example-user-data-file
 * () buld and publish
 
+* () videoground-blog-posts: new DAE file folder project
 * () work on r6 of videoground
 
 
@@ -54,8 +55,9 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * (done) work on electronjs-examples-user-data-file
 * (done) start post #1001 on electronjs-example-user-data-file
 
-* () videoground-blog-posts: finish DAE file land-set-one
-* () videoground-blog-posts: start new DAE file folder project
+* () videoground-blog-posts: new tree3 for DAE file land-set-one
+* () videoground-blog-posts: update template4-seqhooks-obj-grid-land to use land-set-one
+* () videoground-blog-posts: 
 
 * () work on r6 of videoground
 
@@ -68,7 +70,7 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - WED 08/17/2022
 * (done) work on r6 of videoground
 * (done) started a new electronjs example to explore something that I might apply to videoground
-* () videoground-blog-posts: started new DAE file land-set-one
+* (done) videoground-blog-posts: started new DAE file land-set-one
 
 ### () - TUE 08/16/2022
 * (done) see about starting r1 of threejs-examples-sequence-hooks
