--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -54,11 +54,10 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 ### () - FRI 08/19/2022
 * (done) work on electronjs-examples-user-data-file
 * (done) start post #1001 on electronjs-example-user-data-file
+* (done) videoground-blog-posts: new tree3 for DAE file land-set-one
 
-* () videoground-blog-posts: new tree3 for DAE file land-set-one
 * () videoground-blog-posts: update template4-seqhooks-obj-grid-land to use land-set-one
 * () videoground-blog-posts: 
-
 * () work on r6 of videoground
 
 ### () - THU 08/18/2022
