--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -48,7 +48,7 @@ For the last few months I have been focusing mainly just on threejs when it come
 This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
 
 ### () - SAT 08/20/2022
-* () videoground-blog-posts: update template4-seqhooks-obj-grid-land to use land-set-one
+* (done) videoground-blog-posts: update template4-seqhooks-obj-grid-land to use land-set-one
 * () videoground-blog-posts: 
 
 * () edit electronjs-example-user-data-file
