--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -1,6 +1,6 @@
 # todo list for August 2022
 
-VIDEOGROUND,  VIDEOGROUND-BLOG-POSTS, THREEJS, VIDEOGROUND-BETAWORLD
+VIDEOGROUND,  VIDEOGROUND-BLOG-POSTS, THREEJS, ELECTRONJS, VIDEOGROUND-BETAWORLD
 
 Late last month I started working on improving video ground which I have been using regularly to make videos that I then post on youtube. This is something that I think I should continue with into the start of August at least, and with it more content of course when it comes to blog post videos at least. 
 
@@ -12,16 +12,16 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ## () - SUN 08/21/2022 to  SAT 08/27/2022
 
+This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
+
 ### () - SAT 08/27/2022
 
 ### () - FRI 08/26/2022
 * () start post #1002 on threejs-examples-weird-face-two
 
 ### () - THU 08/25/2022
-* () threejs-examples-weird-face-two for post folder
 
 ### () - WED 08/24/2022
-* () threejs-examples-weird-face-two for post folder
 
 ### () - TUE 08/23/2022
 * () start r1 in for post folder on threejs-examples-camera-kit
@@ -29,14 +29,13 @@ For the last few months I have been focusing mainly just on threejs when it come
 * () threejs-examples-weird-face-two for post folder
 
 ### () - MON 08/22/2022
-* () threejs-examples-weird-face-two for post folder
+* () edit electronjs-example-user-data-file
+* () buld and publish
+* () weird-face-two prototype
+* () work on r6 of videoground
 
 ### () - SUN 08/21/2022
 * () videoground-blog-posts: new DAE file folder project
-* () work on r6 of videoground
-
-
-* () threejs-examples-weird-face-two for post folder
 
 
 <!-- ////////// //////////
@@ -45,14 +44,11 @@ For the last few months I have been focusing mainly just on threejs when it come
 
 ## () - SUN 08/14/2022 to  SAT 08/20/2022
 
-This week I would like to start a prototype on threejs on Sunday that I will then write about on Fridays new blog post. On top of that the other main thing is to finish up r5 of videoground, and if possible start r6.
+I wnated to create a new threejs prototype for this fridays post but in place of that I ended up making an electronjs example to write about. For the last few months I have been staying in my lane with threejs, but maybe writing about electronjs once in a while is cllaed for when it comes to this applaction I am working on to make videos
 
 ### () - SAT 08/20/2022
 * (done) videoground-blog-posts: update template4-seqhooks-obj-grid-land to use land-set-one
 * () videoground-blog-posts: 
-
-* () edit electronjs-example-user-data-file
-* () buld and publish
 
 ### () - FRI 08/19/2022
 * (done) work on electronjs-examples-user-data-file
