--- a/todo/today/todo_2022_08.md
+++ b/todo/today/todo_2022_08.md
@@ -29,13 +29,14 @@ This week I would like to start a prototype on threejs on Sunday that I will the
 * () threejs-examples-weird-face-two for post folder
 
 ### () - MON 08/22/2022
+* () videoground-blog-posts: tiny-house-1 dae folder
 * () edit electronjs-example-user-data-file
 * () buld and publish
 * () weird-face-two prototype
 * () work on r6 of videoground
 
 ### () - SUN 08/21/2022
-* () videoground-blog-posts: new DAE file folder project
+* (done) videoground-blog-posts: start new tiny-house-1 dae folder
 
 
 <!-- ////////// //////////
